--- a/EXHIBITION.html
+++ b/EXHIBITION.html
@@ -123,7 +123,7 @@
 		</div>
 		<div class="pic_12">
 			<div class="overlay_div">
-			<img src="Images/NEVERLAND.gif" width="215px">
+			<img src="Images/POS_GIF1.gif" width="215px">
 			</div>
 			<hr><p>Neverland<br>2017</p>
 		</div>
