--- a/EXHIBITION.html
+++ b/EXHIBITION.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>.:FANTASY WORLD:.</title>
+	<link rel="shortcut icon" href="Images/TITTLE_ICO.png">	
 	<link rel="stylesheet" type="text/css" href="EXHIBITION.css">
 	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 	<meta charset="UTF-8">
@@ -136,7 +137,7 @@
 		<div class="circle_01">
 		</div>
 		<div class="pic_13">
-			<img src="Images/13.JPG" width="237px">
+			<img src="Images/13.jpg" width="237px">
 			<p>Miranda Kerr<br>2017</p>
 		</div>
 		<div class="pic_14">
