--- a/BIOGRAPHY.html
+++ b/BIOGRAPHY.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>.:FANTASY WORLD:.</title>
+	<link rel="shortcut icon" href="Images/TITTLE_ICO.png">
 	<link rel="stylesheet" type="text/css" href="BIOGRAPHY.css">
 	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 	<meta charset="UTF-8">
