--- a/INDEX.html
+++ b/INDEX.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<title>.:FANTASY WORLD:.</title>
+	<link rel="shortcut icon" href="Images/TITTLE_ICO.png">
 	<link rel="stylesheet" type="text/css" href="INDEX.css">
 	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 	<meta charset="UTF-8">
+
 </head>
 <body>
 	<script type="text/javascript" src="http://static.tumblr.com/qsifglb/mZjl87ts1/f8.js"></script>
@@ -34,7 +36,7 @@
 		<div class="intro">
 			<h2>INTRODUCTION</h2>
 			<div class="intro_content">
-				<p>Let’s escape the ordinary and be ready to lost somewhere in my outer space.
+				<p>Let’s escape the ordinary and be ready to get lost somewhere in my outer space.
 				</p>
 			</div>
 		</div>
