--- a/INDEX.html
+++ b/INDEX.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>.:FANTASY WORLD:.</title>
-	<link rel="shortcut icon" href="Images/TITTLE_ICO.png">
+	<link rel="shortcut icon" href="Images/TITTLE_ICO.PNG">
 	<link rel="stylesheet" type="text/css" href="INDEX.css">
 	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 	<meta charset="UTF-8">
