--- a/EXHIBITION.html
+++ b/EXHIBITION.html
@@ -137,7 +137,7 @@
 		<div class="circle_01">
 		</div>
 		<div class="pic_13">
-			<img src="Images/13.jpg" width="237px">
+			<img src="Images/13.JPG" width="237px">
 			<p>Miranda Kerr<br>2017</p>
 		</div>
 		<div class="pic_14">
